# PlotFS

./: .gitignore  CLI11.hpp  CMakeLists.txt  LICENSE  README.md  cli.cpp  device.hpp  file.hpp  mount.cpp  plot.hpp  plotfs.fbs  plotfs.hpp
.devcontainer/: Dockerfile  devcontainer.json
